# dashboard

./: .gitignore  README.md  pyproject.toml
examples/: demo.py  static_terminal.py
src/trading_dashboard/: __init__.py  app.py
src/trading_dashboard/core/: __init__.py  frame.py  types.py
src/trading_dashboard/data/: base.py  ibkr.py  mock.py  router.py
src/trading_dashboard/runtime/: __init__.py  cli.py  config.py  module_registry.py  service.py
src/trading_dashboard/signals/: __init__.py  base.py  dsl.py  engine.py
src/trading_dashboard/ui/: __init__.py  dashboard.py  qt_terminal.py  streamlit_app.py  widgets.py  workspace.py
src/trading_dashboard/use_cases/: __init__.py  base.py  lqd_hyg.py  market_toolkits.py
tests/: test_dashboard_pipeline.py
