[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-dashboard-framework"
version = "0.1.0"
description = "Extensible real-time trading dashboard framework with pluggable signals and data sources"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Dashboard Toolkit"}]
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.34",
  "plotly>=5.20",
  "pandas>=2.2",
  "networkx>=3.3",
]
ibkr = [
  "ib-insync>=0.9.86",
]
desktop = [
  "PySide6>=6.7",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
